[package]
name = "hh-rust-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros"] }
